--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ import(furrr)
 import(purrr)
 import(stringr)
 importFrom(loadeR,loadGridData)
+importFrom(raster,crs)
 importFrom(raster,getData)
-importFrom(raster,raster)
-importFrom(sp,proj4string)
+importFrom(sp,CRS)
