--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: chatR
 Type: Package
 Title: Easy loading and visualization of climate models
-Version: 0.0.1
+Version: 0.0.2
 Author: Riccardo Soldan
 Maintainer: Riccardo Soldan <riccardosoldan@hotmail.it>
 Description: More about what it does (maybe more than one line)
@@ -13,11 +13,18 @@ RoxygenNote: 7.2.0
 Imports:
     dplyr, 
     furrr, 
-    loadeR, 
     purrr, 
     raster, 
     sp, 
     stringr,
     transformeR,
-    loadeR.java,
-    climate4R.UDG
+    downscaleR,
+    glue,
+    rnaturalearth,
+    rnaturalearthdata,
+    ggplot2,
+    climate4R.indices,
+    RColorBrewer,
+    tidyr
+Depends:
+    loadeR
