--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,24 @@
 
 export(common_dates)
 export(load_data)
+export(projections)
+import(RColorBrewer)
 import(dplyr)
 import(furrr)
-import(loadeR)
+import(ggplot2)
 import(purrr)
+import(rnaturalearth)
+import(rnaturalearthdata)
 import(stringr)
-importFrom(rJava,is.jnull)
+import(transformeR)
+importFrom(climate4R.indices,linearTrend)
+importFrom(downscaleR,biasCorrection)
+importFrom(glue,glue_collapse)
+importFrom(raster,crop)
+importFrom(raster,extent)
+importFrom(raster,flip)
+importFrom(raster,mask)
+importFrom(raster,stack)
+importFrom(raster,subset)
 importFrom(transformeR,bindGrid)
 importFrom(transformeR,subsetDimension)
